# VISR-Production-Suite

./: .gitignore  .gitlab-ci-templates.yml  .gitlab-ci.yml  CMakeLists.txt  ChangeLog.txt  Contributors.md  LICENSE.md  Readme.md
cmake_modules/: Adjust3rdPartyLibraries.cmake  FindAAX.cmake  FindJuce.cmake  FindSndFile.cmake  FindVST.cmake  JUCE.cmake  PackageConfig.cmake  oslibs.cmake
doc/: CMakeLists.txt
doc/apidoc/: conf.py.in  index.rst
doc/contributing/: VISR_corporate_contributor_licence_agreement_v1.1.docx  VISR_individual_contributor_licence_agreement_v1.1.docx
doc/doxygen/: Doxyfile.in  installation.dox  libdawsupport.dox  libdawutilities.dox  mainpage.dox
doc/userdoc/: binaural_renderer.rst  conf.py.in  download.rst  getting_started.rst  index.rst  installation.rst  introduction.rst  loudspeaker_renderer.rst  loudspeaker_renderer_with_metadapter.rst  object_based_audio.rst  object_editor.rst  people.rst  production_suite.rst  scene_master.rst  tutorial_1.rst  tutorial_2.rst  tutorial_3.rst  tutorial_4.rst
doc/userdoc/css/: custom.css
resources/: RoomIRs.json  RoomIRs_no_object.json  metadataeditor.xml  welcome.txt.in
resources/CAP/: README.rtf
resources/CAP/config/: CAPstereo1.0m.xml  (+1 more)
resources/juce/: AppConfig.h.in  AppConfig_coreLib.h.in  Info.plist.in  InfoAAX.plist.in  InfoAU.plist.in  JuceHeader.h.in  JuceHeader_coreLib.h.in  PkgInfo
resources/launchagents/: VISR-launchagent.plist.in  VISR_environment_install_conda.plist.in  VISR_environment_install_system_python.plist.in
resources/loudspeaker_layouts/: 5.1_SMPTE-ITU_order.xml  5.1_film_order.xml  Dolby_TrueHD_7.1_BluRay_default.xml  Dolby_TrueHD_7.1_alternative.xml  mdo_production.xml  stereo.xml
resources/scripts/: change_dependency_installname.sh  postscript.sh.in  prescript.sh.in
src/: CMakeLists.txt
src/dawplugins/: CMakeLists.txt
src/dawplugins/BinauralRenderer/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Settings.cpp  Settings.h
src/dawplugins/BinauralRenderer/visr_components/: binaural_renderer_component.cpp  binaural_renderer_component.hpp  top_level_component.cpp  top_level_component.hpp  top_level_component_no_net.cpp  top_level_component_no_net.hpp  tracker_component.cpp  tracker_component.hpp
src/dawplugins/CAPRenderer/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SceneWithHeadAndLdspk.cpp  SceneWithHeadAndLdspk.h
src/dawplugins/CAPRenderer/visr_components/: DualbandCapRenderer.cpp  DualbandCapRenderer.hpp  DualbandCapRendererWithReceiver.cpp  DualbandCapRendererWithReceiver.hpp  listener_compensation_CAP.cpp  listener_compensation_CAP.hpp  listener_compensation_CAP_old.cpp  listener_compensation_CAP_old.hpp
src/dawplugins/LoudspeakerRenderer/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Settings.cpp  Settings.h
src/dawplugins/LoudspeakerRenderer/visr_components/: MetadataExposingRenderer.cpp  MetadataExposingRenderer.hpp
src/dawplugins/MetadapterRenderer/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Settings.cpp  Settings.h
src/dawplugins/MetadapterRenderer/visr_components/: MetadapterRenderer.cpp  MetadapterRenderer.hpp
src/dawplugins/MetadataEditor/: CMakeLists.txt  MDOMetadataTable.cpp  MDOMetadataTable.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dawplugins/MultiRenderer/: CMakeLists.txt  PannerUI.cpp  PannerUI.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dawplugins/ObjectEditor/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dawplugins/ReverbObjectEditor/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RoomRIRs.cpp  RoomRIRs.h
src/dawplugins/SceneMaster/: CMakeLists.txt  MetadataTable.cpp  MetadataTable.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dawplugins/SceneMaster/visr_components/: ObjectHandler.cpp  ObjectHandler.hpp
src/libcore/: CMakeLists.txt  IDs.h  PluginBinaryData.h  consumer.cpp  currentDefaultPaths.h.in  export_symbols.hpp  producer.cpp  quasiAllpassFIR_f64_n63_initializer_list.h
src/libcore/Resources/assets/: LoudspeakerMetadata.xml  metadata.xml
src/libcore/graphics/: ErrorPanel.cpp  ErrorPanel.h  NetSettings.cpp  NetSettings.h  NetSettingsBase.cpp  NetSettingsBase.h  Object.cpp  Object.h  OpenGLBase.cpp  OpenGLBase.h  PluginEditorBase.cpp  PluginEditorBase.h  PluginEditorLoudspeakers.cpp  PluginEditorLoudspeakers.h  PluginEditorObject.cpp  PluginEditorObject.h  PluginLookAndFeel.cpp  PluginLookAndFeel.h  Scene.cpp  Scene.h  SceneWithHeadOrientation.cpp  SceneWithHeadOrientation.h  SceneWithLoudspeakers.cpp  SceneWithLoudspeakers.h
src/libcore/network/: UDPReceiver.cpp  UDPReceiver.h  UDPSender.cpp  UDPSender.h
src/libcore/processors/: PluginProcessorBase.cpp  PluginProcessorBase.h  PluginProcessorLoudspeakers.cpp  PluginProcessorLoudspeakers.h  PluginProcessorScene.cpp  PluginProcessorScene.h
src/libvisrsupport/: CMakeLists.txt  VISRComponentWrapper.cpp  VISRComponentWrapper.h  VISRComponentWrapperJUCEParam.cpp  VISRComponentWrapperJUCEParam.h  VISRComponentWrapperMulti.cpp  VISRComponentWrapperMulti.h  VISRComponentWrapperObjVector.cpp  VISRComponentWrapperObjVector.h  VISRListenerPosWrapper.cpp  VISRListenerPosWrapper.h  VISRObjectVectorObserver.h  VISRObjectVectorWrapper.cpp  VISRObjectVectorWrapper.h  VISRObjectWrapper.cpp  VISRObjectWrapper.h  VISRPointSourceExtWrapper.cpp  VISRPointSourceExtWrapper.h  VISRPointSourceRevWrapper.cpp  VISRPointSourceRevWrapper.h  VISRPointSourceWrapper.cpp  VISRPointSourceWrapper.h  export_symbols.hpp
src/libvisrsupport/visr_components/: DualbandCapRenderer.cpp  DualbandCapRenderer.hpp  MetadataExposingRenderer.cpp  MetadataExposingRenderer.hpp  ObjectRenderer.cpp  ObjectRenderer.hpp  ObjectVectorEncoder.cpp  ObjectVectorEncoder.hpp  listener_compensation_CAP.cpp  listener_compensation_CAP.hpp
(+51 files in other folders)
